Fixed gallery buttons not showing up

--- a/src/sass/_galleryArticle.sass
+++ b/src/sass/_galleryArticle.sass
@@ -10,7 +10,7 @@ article.article.galleryArticle
 	img, video
 		width: 100%
 
-	article:hover .holderBox
+	&:hover .holderBox
 		display: flex
 
 	.holderBox
